@@ -1220,6 +1220,8 @@ enum
     RCT1_SCENERY_GEOMETRIC_SCULPTURE_3 = 168, // TGE3
     RCT1_SCENERY_GEOMETRIC_SCULPTURE_4 = 170, // TGE4
     RCT1_SCENERY_GEOMETRIC_SCULPTURE_5 = 171, // TGE5
+
+    RCT1_SCENERY_SMALL_RED_GARDENS = 176, // TG19
 };
 
 enum
